--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Cassandra Bunschoten </title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -26,9 +26,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#CV">CV</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project">Project</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="assets/C_Bunschoten_CV.pdf">CV</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Other Interests</a></li>
                 </ul>
             </div>
@@ -96,7 +96,7 @@
                     <h2 class="mb-5">Curriculum vitae</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <p>Please find my CV <a href = "assets/Web_CV_niet_af.pdf">here</a>. </p>
+                            <p>Please find my CV <a href = "assets/C_Bunschoten_CV.pdf">here</a>. </p>
                         </div>
                         </div>
                     </div>
